--- a/MySite/WebContent/Html/Login.html
+++ b/MySite/WebContent/Html/Login.html
@@ -12,7 +12,8 @@ background-attachment: fixed;"
 >
     <div id="login"> <br><br> 
         <h1>兲兲乐</h1>  
-        <form method="post" action="../jsp/loginReceive.jsp">  
+        <form method="post" action="./../jsp/loginReceive.jsp">
+       <!--   <form method="post" action="loginCorrect.html">   -->
             <input type="text" required="required" placeholder="用户名" name="u"></input>  
             <input type="password" required="required" placeholder="密码" name="p"></input>  
             <button class="but" type="submit">登录</button> 
